Wed Jun  9 15:41:11 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * protocols/ace/INet/inet.mpc:

          The Template_Files section is needed for "make install".

Wed Jun  9 14:45:33 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Adding a compatibility flag for VMS (vms_old_make) as an MPC
          template variable.  The GNU make version on VMS is old
          and possibly buggy.

Wed Jun  9 14:44:07 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tests/Based_Pointer_Test.cpp:
        * tests/DLL_Test.cpp:
        * tests/Process_Semaphore_Test.cpp:
        * tests/Process_Test.cpp:
        * tests/Signal_Test.cpp:

          Fixes for wchar on Unix.  There is no ACE_OS::getenv(wchar_t*) on
          Unix, it's only on Win32.

Tue Jun  8 21:59:16 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/PerlACE/Process_Unix.pm:

          Use the "EXE_SUBDIR" property of the TestTarget object (Process_Win32
          already has this behavior).

        * bin/PerlACE/TestTarget.pm:

          Supporting setting the "ARCH" property on a per-TestTarget basis.
          Added a GetArchDir() method to the TestTarget object.

Tue Jun  8 14:25:56 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * protocols/ace/INet/inet.mpc:

          Install the export header.

Tue Jun 08 08:50:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/StreamHandler.cpp:
        * protocols/ace/INet/String_IOStream.cpp:
        * protocols/ace/INet/HTTP_IOStream.cpp:
          Changed static_cast to ACE truncate_cast.

Tue Jun 08 07:32:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/StreamHandler.cpp:
        * protocols/ace/INet/String_IOStream.cpp:
        * protocols/ace/INet/HTTP_IOStream.cpp:
          Changes to silence conversion warnings.

Tue Jun 08 07:16:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/StreamHandler.h: